backup/rhods-dashboard.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    internal.config.kubernetes.io/previousKinds: HTTPRoute
    internal.config.kubernetes.io/previousNames: rhods-dashboard
    internal.config.kubernetes.io/previousNamespaces: default
    platform.opendatahub.io/instance.name: default-dashboard
    platform.opendatahub.io/type: OpenShift AI Self-Managed
    platform.opendatahub.io/version: 3.2.0
  name: rhods-dashboard
  namespace: redhat-ods-applications
  labels:
    app: rhods-dashboard
    app.kubernetes.io/part-of: rhods-dashboard
    app.opendatahub.io/rhods-dashboard: 'true'
    platform.opendatahub.io/part-of: dashboard
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: data-science-gateway
      namespace: openshift-ingress
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: rhods-dashboard
          port: 8443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
